[tool.black]
line-length = 99
py36 = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.poetry]
name = "saturn"
version = "0.2.0"
description = "CLI tool for interacting with ECS scheduled tasks"
authors = ["James Turk <jpturk@pbs.org>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pbs/saturn/"

[tool.poetry.scripts]
saturn = "saturn.cli:cli"



[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"
tabulate = "^0.8.2"
Click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
moto = "^1.3"
black = {version = "^18.9b0",allows-prereleases = true}
